--- a/hub-front/package.json
+++ b/hub-front/package.json
@@ -11,16 +11,10 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@tailwindcss/typography": "^0.5.14",
 		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.47",
 		"svelte": "^5.0.0",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^3.4.14",
 		"vite": "^5.0.3"
-	},
-	"dependencies": {
-		"@popperjs/core": "^2.11.8",
-		"flowbite": "^2.5.2",
-		"flowbite-svelte": "^0.47.1",
-		"tailwind-merge": "^2.5.4"
 	}
 }
